# graphicsmagick

./: ChangeLog  ChangeLog.2022  Copyright.txt  Makefile.am  Makefile.in  NEWS.txt  README.txt  aclocal.m4  common.shi.in  configure  configure.ac  version.sh
Magick++/: COPYING  ChangeLog  Makefile.am
Magick++/demo/: analyze.cpp  button.cpp  demo.cpp  detrans.cpp  flip.cpp  gravity.cpp  piddle.cpp  shapes.cpp  zoom.cpp
Magick++/lib/: Color.cpp  Drawable.cpp  Exception.cpp  Image.cpp  Options.cpp  STL.cpp
Magick++/lib/Magick++/: CoderInfo.h  Exception.h  Image.h  Include.h  Montage.h  STL.h  Thread.h
Magick++/tests/: appendImages.cpp  attributes.cpp  averageImages.cpp  coalesceImages.cpp  coderInfo.cpp  color.cpp  colorHistogram.cpp  exceptions.cpp  montageImages.cpp  morphImages.cpp  readWriteBlob.cpp  readWriteImages.cpp
PerlMagick/: Changelog  Magick.pm  Magick.pm.in  Magick.xs  Makefile.PL  Makefile.PL.in  Makefile.am  README.txt
PerlMagick/t/: composite.t  definitions.t  input.aai  input.ora  input1_PS.wpg  input2_PS.wpg  montage.t  ping.t  read.t  subroutines.pl  write.t
PerlMagick/t/cgm/: input.cgm  read.t
PerlMagick/t/mpeg/: read.t
PerlMagick/t/png/: read.t
PerlMagick/t/rad/: read.t  write.t
PerlMagick/t/tiff/: read.t
PerlMagick/t/wmf/: read.t
TclMagick/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  cscope.files  cscope.out  pkgIndex.tcl
TclMagick/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
TclMagick/doc/: TclMagick.html  TkMagick.html  index.html
TclMagick/generic/: TclMagick.c  TclMagick.c.orig  TclMagick.h  TclMagickAppInit.c  TkMagick.c  config.h.in  libttkcommon.h  libttkcommon.h.orig
TclMagick/tests/: test-bmp-compare.tcl  test-draw.tcl  test-pixel.tcl  test-wand.tcl  tkmagick.tcl
TclMagick/tmp/: x-Describe.txt
TclMagick/unix/m4/: tcl.m4
coders/: Makefile.am  aai.c  art.c  avs.c  bmp.c  braille.c  cals.c  cineon.c  cmyk.c  dcm.c  dcraw.c  dib.c  dpx.c  ept.c  fax.c  fits.c  fpx.c  gif.c  gray.c  heif.c  hrz.c  html.c  info.c  jbig.c  jnx.c  jp2.c  jpeg.c  jxl.c  locale.c  logo.c  map.c  mat.c  meta.c  miff.c  mono.c  mpc.c  mpr.c  msl.c  mtv.c  mvg.c  (+38 more)
config/: Makefile.am  delegates.mgk.in  type-urw-base35-otf.mgk.in
debian/: README.Debian  changelog  control  graphicsmagick.mime  libgraphics-magick-perl.install  libgraphics-magick-perl.manpages  libgraphicsmagick++-q16-12.install  libgraphicsmagick++-q16-12.symbols.disabled  libgraphicsmagick++-q16-12.symbols.hppa.disabled  libgraphicsmagick++-q16-12.symbols.s390.disabled  libgraphicsmagick++-q16-12t64.lintian-overrides  libgraphicsmagick++-q16-12t64.symbols.mips.disabled  libgraphicsmagick++1-dev.install  libgraphicsmagick++1-dev.links  libgraphicsmagick++1-dev.manpages  libgraphicsmagick-q16-3.install  libgraphicsmagick-q16-3.lintian-overrides  libgraphicsmagick-q16-3.symbols  libgraphicsmagick-q16-3t64.lintian-overrides  libgraphicsmagick-q16-3t64.symbols  libgraphicsmagick1-dev.install  libgraphicsmagick1-dev.links  libgraphicsmagick1-dev.manpages  rules  watch
debian/patches/: link-demos.diff  semaphore_O0_ppc64el.patch  series
debian/source/: lintian-overrides
debian/upstream/: metadata  signing-key.asc
locale/: C.mgk  README.txt  gm_messages.mc  locale_c.h
magick/: GraphicsMagick.pc.in  Makefile.am  PreRvIcccm.h  analyze.c  animate.c  attribute.c  blob.c  blob.h  channel.c  color.c  color_lookup.c  colormap.c  colorspace.c  command.c  common.h  compare.c  delegate-private.h  delegate.c  delegate.h  deprecate.c  deprecate.h  describe.c  display.c  draw.c  effect.c  enum_strings.c  export.c  floats.c  gem.c  gradient.c  image.c  image.h  list.c  locale_c.h  magic.c  magick.c  magick_config.h.in  magick_endian.c  magick_endian.h  magick_types.h  (+32 more)
scripts/: changelog2rst.sh  gmsymbols.sh  html_fragments.py
tests/: Makefile.am  bitstream.c  bitstream.tap  constitute.c  maptest.c  rwblob.c  rwblob.tap  rwfile.c  rwfile.tap  rwfile_miff.tap  rwfile_pdf.tap
utilities/: Makefile.am  gm.1  miff.4
utilities/tests/: common.sh  hald-clut.tap  help.tap  version.tap
utilities/tests/gen-tiff-images/: README.txt  genimages
wand/: drawing_wand.c  magick_wand.c  pixel_wand.c  pixel_wand.h  wand_symbols.h  wandtest.c
www/: ..rej  ChangeLog-2001.html  ChangeLog-2001.rst  ChangeLog-2002.html  ChangeLog-2002.rst  ChangeLog-2003.html  ChangeLog-2003.rst  ChangeLog-2004.html  ChangeLog-2004.rst  ChangeLog-2005.html  ChangeLog-2005.rst  ChangeLog-2006.html  ChangeLog-2006.rst  ChangeLog-2007.html  ChangeLog-2007.rst  ChangeLog-2008.html  ChangeLog-2008.rst  ChangeLog-2009.html  ChangeLog-2009.rst  ChangeLog-2010.html  ChangeLog-2010.rst  ChangeLog-2011.html  ChangeLog-2011.rst  ChangeLog-2012.html  ChangeLog-2012.rst  ChangeLog-2013.html  ChangeLog-2013.rst  ChangeLog-2014.html  ChangeLog-2014.rst  ChangeLog-2015.html  ChangeLog-2015.rst  ChangeLog-2016.html  ChangeLog-2016.rst  ChangeLog-2017.html  ChangeLog-2017.rst  ChangeLog-2018.html  ChangeLog-2018.rst  ChangeLog-2019.html  ChangeLog-2019.rst  ChangeLog-2020.html  (+70 more)
www/Magick++/: Blob.html  ChangeLog.html  ChangeLog.rst  CoderInfo.html  Color.html  Drawable.html  Enumerations.html  Exception.html  FormatCharacters.html  Geometry.html  Image.html  Image.rst  ImageDesign.html  Montage.html  PixelPacket.html  Pixels.html  TypeMetric.html  index.html
www/api/: animate.html  annotate.html  api.html  attribute.html  average.html  blob.html  cdl.html  channel.html  color.html  colormap.html  compare.html  composite.html  confirm_access.html  constitute.html  decorate.html  deprecate.html  describe.html  display.html  draw.html  effect.html  enhance.html  error.html  export.html  fx.html  hclut.html  image.html  import.html  list.html  log.html  magick.html  memory.html  monitor.html  montage.html  operator.html  paint.html  pixel_cache.html  pixel_iterator.html  plasma.html  profile.html  quantize.html  (+13 more)
www/wand/: Makefile.am  drawing_wand.html  magick_wand.html  pixel_wand.html  wand.html
